--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AwesomeApp",
+  "name": "chatapp",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -34,6 +34,7 @@
     "@react-native/typescript-config": "0.82.0",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
