--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^7.4.9",
     "react": "19.1.1",
     "react-native": "0.82.0",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-paper": "^5.14.5",
