--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-sound": "^0.13.0",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-video": "^6.17.0",
+    "react-native-vision-camera": "^4.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
