--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-navigation/stack": "^7.4.9",
     "react": "19.1.1",
     "react-native": "0.82.0",
-    "react-native-emoji-selector": "^0.2.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-image-picker": "^8.2.1",
     "react-native-paper": "^5.14.5",
@@ -24,7 +23,8 @@
     "react-native-sound": "^0.13.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-video": "^6.17.0",
-    "react-native-vision-camera": "^4.7.2"
+    "react-native-vision-camera": "^4.7.2",
+    "rn-emoji-keyboard": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
